--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "description": "",
   "dependencies": {
     "cypress": "^13.15.1"
+  },
+  "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
+    "cypress-file-upload": "^5.0.8",
+    "cypress-xpath": "^2.0.1"
   }
 }
